--- a/now.json
+++ b/now.json
@@ -3,8 +3,8 @@
     "env": {
       "SESSION_SECRET": "@session_secret",
       "SECRET_KEY": "@secret_key_li",
-      "CLIENT_ID": "86vdyr7busnieb",
-      "CLIENT_SECRET": "UfIOY0TyMsPrjUaM",
+      "CLIENT_ID": "@client_id_li",
+      "CLIENT_SECRET": "@client_secret_li",
       "REDIRECT_URI": "https://portfolio-bryant.now.sh/api/callback"
     }
   }
