--- a/now.json
+++ b/now.json
@@ -5,7 +5,7 @@
       "SECRET_KEY": "@secret_key_li",
       "CLIENT_ID": "@client_id_li",
       "CLIENT_SECRET": "@client_secret_li",
-      "REDIRECT_URI": "https://portfolio-bryant.now.sh/api/callback"
+      "REDIRECT_URI": "https://express-grant-api.now.sh/api/callback"
     }
   }
 }
