--- a/now.json
+++ b/now.json
@@ -1,5 +1,5 @@
 {
-  "builds": [{ "src": "index.js", "use": "@now/node-server" }],
+  "builds": [{ "src": "index.js", "use": "@now/node" }],
   "routes": [
     {
       "src": "/hello",
