--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "morgan": "^1.10.0"
   },
   "scripts": {
+    "dev": "nodemon index.js",
     "start": "node index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
