--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,19 @@
 {
-  "tabWidth": 2,
-  "useTabs": false
+    "arrowParens": "always",
+    "bracketSpacing": true,
+    "printWidth": 120,
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none",
+    "useTabs": false,
+    "overrides": [
+        {
+            "files": "*.md",
+            "options": {
+                "tabWidth": 2,
+                "useTabs": false
+            }
+        }
+    ]
 }
