--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
   "name": "express-grant-api",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "engines": {
     "node": "12.x"
   },
   "repository": "https://github.com/bryant00/express-grant-api.git",
   "author": "bryant00 <bryantpatton@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "DEBUG=myapp:* nodemon ./bin/www",
+    "start": "node ./bin/www"
+  },
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "compress": "^0.99.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "grant-express": "^5.0.0",
-    "morgan": "^1.10.0"
-  },
-  "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "helmet": "^3.22.0",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
+    "pug": "^3.0.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "2.0.4"
   }
 }
