--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grant-express": "^5.0.0",
     "helmet": "^3.22.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "pug": "^3.0.0",
     "winston": "^3.2.1"
